--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Taoran-01/JS-Circular-Deque/issues"
   },
-  "homepage": "https://github.com/Taoran-01/JS-Circular-Deque#readme"
+  "homepage": "https://github.com/Taoran-01/JS-Circular-Deque#readme",
+  "dependencies": {
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
+  }
 }
